-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0
-
None
Qt Creator 4.3.0 installed during Qt 5.9 installation (open source under Ubuntu 17.04) doesn't list any available Android SDKs in the drop-down list.
This is the same situation brought up in stackoverflow The fix provided in stackoverflow (manually editing the .user.pro file) indeed works and then the application is build and deployed properly in an Android device.
This issue was also reported previously in:
Don't detect Android SDK's
Android build SDK dropdown not populated
Building Android projects with Qt 5.8: SDK & build.xml
Can't see Android SDK
Qt can't use latest Android SDK
All of those issues are already closed but some of them appear as not even evaluated.
For Gerrit Dashboard: QTCREATORBUG-18458 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
200761,3 | Android: Fix sdkmanager timing out on slower machines | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |